--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "html-webpack-plugin": "^5.5.0",
     "normalize.css": "^8.0.1",
+    "swiper": "^8.3.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
